# chunkhound

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HUMAN_REVIEW.md  MIGRATION_GUIDE.md  Makefile  README.md  RELEASING.md  compaction_comparison_report.html  docker-compose.yml  hatch_build.py  pyproject.toml  test_openai_fixes.py  test_parsing_comparison.py  test_py_parsing.py  test_ts_parsing.ts
.tmp-docs/: embedding_failure_handling_plan.md
chunkhound/: __main__.py  database.py  database_factory.py  embeddings.py  file_discovery_cache.py  llm_manager.py  parser.py  pipeline_bridge.py  tree_cache.py  version.py
chunkhound_native/: __init__.py
docker/: Dockerfile  chunkhound-mcp.service  entrypoint.sh
docs/: embedded-sql-detection.md  fork-pr-guide.md  js-family-parser-consolidation-proposal.md  js-family-parser-refactoring-tasks.md  js-family-parser-test-coverage-audit.md  js-family-parser-test-specification.md  js-family-parsing-gap-analysis.md  js-family-test-verification-report.md  rust-pipeline-architecture.html
federation/: __init__.py  config.py  mcp_tool.py  service.py
graph/: cli.py  edge_extractor.py  mcp_tool.py  models.py  service.py  storage.py
operations/: README.md  watchman_live_indexing.md
scripts/: analyze_lancedb_chunks.py  bench_db_writer.py  bench_discovery.py  bench_pipeline.py  bench_yaml.py  benchmark_database.py  benchmark_mcp_search.py  check_flaky_annotations.py  check_lancedb_duplicates.py  clear_legacy_embeddings.py  count_lancedb_embeddings.py  demo_compaction.py  generate-compose.sh  generate_cluster_bench.py  inspect_php_ast.py  install_native.py  mcp-server.sh  php_parser_final_summary.py  (+19 more)
(+1097 files in other folders)
