[package]
name = "chunkhound_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "chunkhound_native"
crate-type = ["cdylib"]

[dependencies]
pyo3    = { version = "0.22", features = ["extension-module"] }
ignore  = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
